# sql_learn

./: CMakeLists.txt  test.json  test2.json  test3.json  test_sql.cc  test_sql_rrys.cc
include/: interFace.hpp  myPushButton.hpp  mysqlDataBase.hpp
src/: interFace.cc  main.cc  myPushButton.cc  mysqlDataBase.cc
